	PR c++/11645 	* cp-tree.h (accessible_base_p): Declare. 	* call.c (build_over_call): Use it. 	* search.c (accessible_base_p): New function, split out from ... 	(lookup_base): ... here.

PR c++/11645
	* g++.dg/inherit/access4.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69724 138bc75d-0d04-0410-961f-82ee72b054a4